--- a/docs/glfwrm.tex
+++ b/docs/glfwrm.tex
@@ -99,9 +99,7 @@ to remedy this by providing the following functionality:
 \item Opening and managing an \OpenGL\ window.
 \item Keyboard, mouse and joystick input.
 \item A high precision timer.
-\item Multi threading support.
 \item Support for querying and using \OpenGL\ extensions.
-\item Image file loading support.
 \end{itemize}
 \vspace{18pt}
 
@@ -221,20 +219,6 @@ etc).
 
 
 %-------------------------------------------------------------------------
-\section{Threads}
-\GLFW\ has functions for creating threads, which means that it is possible
-to make multi threaded applications with \GLFW . The thread that calls
-glfwInit becomes the main thread, and it is recommended that all
-\GLFW\ and \OpenGL\ functions are called from the main thread. Additional
-threads should primarily be used for CPU heavy tasks or for managing
-other resources, such as file or sound I/O.
-
-It should be noted that the current implementation of \GLFW\ is not thread
-safe, so you should never call \GLFW\ functions from different threads.
-\footnote{Of course, all thread managing functions are thread safe.}
-
-
-%-------------------------------------------------------------------------
 % Function Reference
 %-------------------------------------------------------------------------
 \chapter{Function Reference}
@@ -293,8 +277,7 @@ none
 
 \begin{refdescription}
 The function terminates \GLFW. Among other things it closes the window,
-if it is opened, and kills any running threads. This function must be
-called before a program exits.
+if it is opened. This function must be called before a program exits.
 \end{refdescription}
 
 
@@ -1858,459 +1841,6 @@ to this time. The time is given in seconds.
 
 
 %-------------------------------------------------------------------------
-\subsection{glfwSleep}
-
-\textbf{C language syntax}
-\begin{lstlisting}
-void glfwSleep( double time )
-\end{lstlisting}
-
-\begin{refparameters}
-\begin{description}
-\item [\textit{time}]\ \\
-  Time, in seconds, to sleep.
-\end{description}
-\end{refparameters}
-
-\begin{refreturn}
-none
-\end{refreturn}
-
-\begin{refdescription}
-The function puts the calling thread to sleep for the requested period of
-time. Only the calling thread is put to sleep. Other threads within the
-same process can still execute.
-\end{refdescription}
-
-\begin{refnotes}
-There is usually a system dependent minimum time for which it is possible
-to sleep. This time is generally in the range 1~$ms$ to 20~$ms$, depending
-on thread sheduling time slot intervals etc. Using a shorter time as a
-parameter to \textbf{glfwSleep} can give one of two results: either the
-thread will sleep for the minimum possible sleep time, or the thread will
-not sleep at all (\textbf{glfwSleep} returns immediately). The latter
-should only happen when very short sleep times are specified, if at all.
-\end{refnotes}
-
-
-%-------------------------------------------------------------------------
-\pagebreak
-\section{Image and Texture Loading}
-In order to aid loading of image data into textures, \GLFW\ has basic support
-for loading images from files and memory buffers.
-
-
-%-------------------------------------------------------------------------
-\begin{table}[p]
-\begin{center}
-\begin{tabular}{|l|p{9.0cm}|} \hline \raggedright
-\textbf{Name}          & \textbf{Description}\\ \hline
-GLFW\_NO\_RESCALE\_BIT & Do not rescale image to closest $2^m\times2^n$ resolution\\ \hline
-GLFW\_ORIGIN\_UL\_BIT  & Specifies that the origin of the \textit{loaded} image should be in the upper left corner (default is the lower left corner)\\ \hline
-GLFW\_ALPHA\_MAP\_BIT  & Treat single component images as alpha maps rather than luminance maps\\ \hline
-\end{tabular}
-\end{center}
-\caption{Flags for functions loading image data into textures}
-\label{tab:rdimgflags}
-\end{table}
-
-
-%-------------------------------------------------------------------------
-\subsection{glfwReadImage}
-
-\textbf{C language syntax}
-\begin{lstlisting}
-int glfwReadImage( const char *name, GLFWimage *img, int flags )
-\end{lstlisting}
-
-\begin{refparameters}
-\begin{description}
-\item [\textit{name}]\ \\
-  A null terminated ISO~8859-1 string holding the name of the file that
-  should be read.
-\item [\textit{img}]\ \\
-  Pointer to a GLFWimage struct, which will hold the information about
-  the loaded image (if the read was successful).
-\item [\textit{flags}]\ \\
-  Flags for controlling the image reading process. Valid flags are listed
-  in table \ref{tab:rdimgflags}
-\end{description}
-\end{refparameters}
-
-\begin{refreturn}
-The function returns GL\_TRUE if the image was loaded successfully.
-Otherwise GL\_FALSE is returned.
-\end{refreturn}
-
-\begin{refdescription}
-The function reads an image from the file specified by the parameter
-\textit{name} and returns the image information and data in a GLFWimage
-structure, which has the following definition:
-
-\begin{lstlisting}
-typedef struct {
-    int Width, Height;    // Image dimensions
-    int Format;           // OpenGL pixel format
-    int BytesPerPixel;    // Number of bytes per pixel
-    unsigned char *Data;  // Pointer to pixel data
-} GLFWimage;
-\end{lstlisting}
-
-\textit{Width} and \textit{Height} give the dimensions of the image.
-\textit{Format} specifies an \OpenGL\ pixel format, which can be
-GL\_LUMINANCE or GL\_ALPHA (for gray scale images), GL\_RGB or GL\_RGBA.
-\textit{BytesPerPixel} specifies the number of bytes per pixel.
-\textit{Data} is a pointer to the actual pixel data.
-
-By default the read image is rescaled to the nearest larger $2^m\times2^n$
-resolution using bilinear interpolation, if necessary, which is useful if
-the image is to be used as an \OpenGL\ texture. This behavior can be
-disabled by setting the GLFW\_NO\_RESCALE\_BIT flag.
-
-Unless the flag GLFW\_ORIGIN\_UL\_BIT is set, the first pixel in
-\textit{img->Data} is the lower left corner of the image. If the flag
-GLFW\_ORIGIN\_UL\_BIT is set, however, the first pixel is the upper left
-corner.
-
-For single component images (i.e. gray scale), \textit{Format} is set
-to GL\_ALPHA if the flag GLFW\_ALPHA\_MAP\_BIT flag is set, otherwise
-\textit{Format} is set to GL\_LUMINANCE.
-\end{refdescription}
-
-\begin{refnotes}
-\textbf{glfwReadImage} supports the Truevision Targa version 1 file format
-(.TGA). Supported pixel formats are: 8-bit gray scale, 8-bit paletted
-(24/32-bit color), 24-bit true color and 32-bit true color + alpha.
-
-Paletted images are translated into true color or true color + alpha pixel
-formats.
-
-Please note that \OpenGL~1.0 does not support single component alpha maps,
-so do not use images with Format = GL\_ALPHA directly as textures under
-\OpenGL~1.0.
-\end{refnotes}
-
-
-%-------------------------------------------------------------------------
-\subsection{glfwReadMemoryImage}
-
-\textbf{C language syntax}
-\begin{lstlisting}
-int glfwReadMemoryImage( const void *data, long size, GLFWimage *img, int flags )
-\end{lstlisting}
-
-\begin{refparameters}
-\begin{description}
-\item [\textit{data}]\ \\
-  The memory buffer holding the contents of the file that should be read.
-\item [\textit{size}]\ \\
-  The size, in bytes, of the memory buffer.
-\item [\textit{img}]\ \\
-  Pointer to a GLFWimage struct, which will hold the information about
-  the loaded image (if the read was successful).
-\item [\textit{flags}]\ \\
-  Flags for controlling the image reading process. Valid flags are listed
-  in table \ref{tab:rdimgflags}
-\end{description}
-\end{refparameters}
-
-\begin{refreturn}
-The function returns GL\_TRUE if the image was loaded successfully.
-Otherwise GL\_FALSE is returned.
-\end{refreturn}
-
-\begin{refdescription}
-The function reads an image from the memory buffer specified by the parameter
-\textit{data} and returns the image information and data in a GLFWimage
-structure, which has the following definition:
-
-\begin{lstlisting}
-typedef struct {
-    int Width, Height;    // Image dimensions
-    int Format;           // OpenGL pixel format
-    int BytesPerPixel;    // Number of bytes per pixel
-    unsigned char *Data;  // Pointer to pixel data
-} GLFWimage;
-\end{lstlisting}
-
-\textit{Width} and \textit{Height} give the dimensions of the image.
-\textit{Format} specifies an \OpenGL\ pixel format, which can be
-GL\_LUMINANCE or GL\_ALPHA (for gray scale images), GL\_RGB or GL\_RGBA.
-\textit{BytesPerPixel} specifies the number of bytes per pixel.
-\textit{Data} is a pointer to the actual pixel data.
-
-By default the read image is rescaled to the nearest larger $2^m\times2^n$
-resolution using bilinear interpolation, if necessary, which is useful if
-the image is to be used as an \OpenGL\ texture. This behavior can be
-disabled by setting the GLFW\_NO\_RESCALE\_BIT flag.
-
-Unless the flag GLFW\_ORIGIN\_UL\_BIT is set, the first pixel in
-\textit{img->Data} is the lower left corner of the image. If the flag
-GLFW\_ORIGIN\_UL\_BIT is set, however, the first pixel is the upper left
-corner.
-
-For single component images (i.e. gray scale), \textit{Format} is set
-to GL\_ALPHA if the flag GLFW\_ALPHA\_MAP\_BIT flag is set, otherwise
-\textit{Format} is set to GL\_LUMINANCE.
-\end{refdescription}
-
-\begin{refnotes}
-\textbf{glfwReadMemoryImage} supports the Truevision Targa version 1 file
-format (.TGA). Supported pixel formats are: 8-bit gray scale, 8-bit paletted
-(24/32-bit color), 24-bit true color and 32-bit true color + alpha.
-
-Paletted images are translated into true color or true color + alpha pixel
-formats.
-
-Please note that \OpenGL~1.0 does not support single component alpha maps,
-so do not use images with Format = GL\_ALPHA directly as textures under
-\OpenGL~1.0.
-\end{refnotes}
-
-
-%-------------------------------------------------------------------------
-\subsection{glfwFreeImage}
-
-\textbf{C language syntax}
-\begin{lstlisting}
-void glfwFreeImage( GLFWimage *img )
-\end{lstlisting}
-
-\begin{refparameters}
-\begin{description}
-\item [\textit{img}]\ \\
-  Pointer to a GLFWimage struct.
-\end{description}
-\end{refparameters}
-
-\begin{refreturn}
-none
-\end{refreturn}
-
-\begin{refdescription}
-The function frees any memory occupied by a loaded image, and clears all
-the fields of the GLFWimage struct. Any image that has been loaded by the
-\textbf{glfwReadImage} function should be deallocated using this function,
-once the image is not needed anymore.
-\end{refdescription}
-
-
-%-------------------------------------------------------------------------
-\begin{table}[p]
-\begin{center}
-\begin{tabular}{|l|p{9.0cm}|} \hline \raggedright
-\textbf{Name}             & \textbf{Description}\\ \hline
-GLFW\_BUILD\_MIPMAPS\_BIT & Automatically build and upload all mipmap levels\\ \hline
-GLFW\_ORIGIN\_UL\_BIT     & Specifies that the origin of the \textit{loaded} image should be in the upper left corner (default is the lower left corner)\\ \hline
-GLFW\_ALPHA\_MAP\_BIT     & Treat single component images as alpha maps rather than luminance maps\\ \hline
-\end{tabular}
-\end{center}
-\caption{Flags for \textbf{glfwLoadTexture2D}}
-\label{tab:ldtexflags}
-\end{table}
-
-
-%-------------------------------------------------------------------------
-\subsection{glfwLoadTexture2D}
-
-\textbf{C language syntax}
-\begin{lstlisting}
-int glfwLoadTexture2D( const char *name, int flags )
-\end{lstlisting}
-
-\begin{refparameters}
-\begin{description}
-\item [\textit{name}]\ \\
-  An ISO~8859-1 string holding the name of the file that should be loaded.
-\item [\textit{flags}]\ \\
-  Flags for controlling the texture loading process. Valid flags are
-  listed in table \ref{tab:ldtexflags}.
-\end{description}
-\end{refparameters}
-
-\begin{refreturn}
-The function returns GL\_TRUE if the texture was loaded successfully.
-Otherwise GL\_FALSE is returned.
-\end{refreturn}
-
-\begin{refdescription}
-The function reads an image from the file specified by the parameter
-\textit{name} and uploads the image to \OpenGL\ texture memory (using the
-\textbf{glTexImage2D} function).
-
-If the GLFW\_BUILD\_MIPMAPS\_BIT flag is set, all mipmap levels for the
-loaded texture are generated and uploaded to texture memory.
-
-Unless the flag GLFW\_ORIGIN\_UL\_BIT is set, the origin of the texture
-is the lower left corner of the loaded image. If the flag
-GLFW\_ORIGIN\_UL\_BIT is set, however, the first pixel is the upper left
-corner.
-
-For single component images (i.e. gray scale), the texture is uploaded as
-an alpha mask if the flag GLFW\_ALPHA\_MAP\_BIT flag is set, otherwise
-it is uploaded as a luminance texture.
-\end{refdescription}
-
-\begin{refnotes}
-\textbf{glfwLoadTexture2D} supports the Truevision Targa version 1 file
-format (.TGA). Supported pixel formats are: 8-bit gray scale, 8-bit
-paletted (24/32-bit color), 24-bit true color and 32-bit true color +
-alpha.
-
-Paletted images are translated into true color or true color + alpha pixel
-formats.
-
-The read texture is always rescaled to the nearest larger $2^m\times2^n$
-resolution using bilinear interpolation, if necessary, since \OpenGL\
-requires textures to have a $2^m\times2^n$ resolution.
-
-If the GL\_SGIS\_generate\_mipmap extension, which is usually hardware
-accelerated, is supported by the \OpenGL\ implementation it will be used
-for mipmap generation. Otherwise the mipmaps will be generated by \GLFW\
-in software.
-
-Since \OpenGL~1.0 does not support single component alpha maps, alpha map
-textures are converted to RGBA format under \OpenGL~1.0 when the
-GLFW\_ALPHA\_MAP\_BIT flag is set and the loaded texture is a single
-component texture. The red, green and blue components are set to 1.0.
-\end{refnotes}
-
-
-%-------------------------------------------------------------------------
-\subsection{glfwLoadMemoryTexture2D}
-
-\textbf{C language syntax}
-\begin{lstlisting}
-int glfwLoadMemoryTexture2D( const void *data, long size, int flags )
-\end{lstlisting}
-
-\begin{refparameters}
-\begin{description}
-\item [\textit{data}]\ \\
-  The memory buffer holding the contents of the file that should be loaded.
-\item [\textit{size}]\ \\
-  The size, in bytes, of the memory buffer.
-\item [\textit{flags}]\ \\
-  Flags for controlling the texture loading process. Valid flags are
-  listed in table \ref{tab:ldtexflags}.
-\end{description}
-\end{refparameters}
-
-\begin{refreturn}
-The function returns GL\_TRUE if the texture was loaded successfully.
-Otherwise GL\_FALSE is returned.
-\end{refreturn}
-
-\begin{refdescription}
-The function reads an image from the memory buffer specified by the parameter
-\textit{data} and uploads the image to \OpenGL\ texture memory (using the
-\textbf{glTexImage2D} function).
-
-If the GLFW\_BUILD\_MIPMAPS\_BIT flag is set, all mipmap levels for the
-loaded texture are generated and uploaded to texture memory.
-
-Unless the flag GLFW\_ORIGIN\_UL\_BIT is set, the origin of the texture
-is the lower left corner of the loaded image. If the flag
-GLFW\_ORIGIN\_UL\_BIT is set, however, the first pixel is the upper left
-corner.
-
-For single component images (i.e. gray scale), the texture is uploaded as
-an alpha mask if the flag GLFW\_ALPHA\_MAP\_BIT flag is set, otherwise
-it is uploaded as a luminance texture.
-\end{refdescription}
-
-\begin{refnotes}
-\textbf{glfwLoadMemoryTexture2D} supports the Truevision Targa version 1 file
-format (.TGA). Supported pixel formats are: 8-bit gray scale, 8-bit
-paletted (24/32-bit color), 24-bit true color and 32-bit true color +
-alpha.
-
-Paletted images are translated into true color or true color + alpha pixel
-formats.
-
-The read texture is always rescaled to the nearest larger $2^m\times2^n$
-resolution using bilinear interpolation, if necessary, since \OpenGL\
-requires textures to have a $2^m\times2^n$ resolution.
-
-If the GL\_SGIS\_generate\_mipmap extension, which is usually hardware
-accelerated, is supported by the \OpenGL\ implementation it will be used
-for mipmap generation. Otherwise the mipmaps will be generated by \GLFW\
-in software.
-
-Since \OpenGL~1.0 does not support single component alpha maps, alpha map
-textures are converted to RGBA format under \OpenGL~1.0 when the
-GLFW\_ALPHA\_MAP\_BIT flag is set and the loaded texture is a single
-component texture. The red, green and blue components are set to 1.0.
-\end{refnotes}
-
-
-%-------------------------------------------------------------------------
-\subsection{glfwLoadTextureImage2D}
-
-\textbf{C language syntax}
-\begin{lstlisting}
-int glfwLoadTextureImage2D( GLFWimage *img, int flags )
-\end{lstlisting}
-
-\begin{refparameters}
-\begin{description}
-\item [\textit{img}]\ \\
-  Pointer to a GLFWimage struct holding the information about
-  the image to be loaded.
-\item [\textit{flags}]\ \\
-  Flags for controlling the texture loading process. Valid flags are
-  listed in table \ref{tab:ldtexflags}.
-\end{description}
-\end{refparameters}
-
-\begin{refreturn}
-The function returns GL\_TRUE if the texture was loaded successfully.
-Otherwise GL\_FALSE is returned.
-\end{refreturn}
-
-\begin{refdescription}
-The function uploads the image specified by the parameter \textit{img} to
-\OpenGL\ texture memory (using the \textbf{glTexImage2D} function).
-
-If the GLFW\_BUILD\_MIPMAPS\_BIT flag is set, all mipmap levels for the
-loaded texture are generated and uploaded to texture memory.
-
-Unless the flag GLFW\_ORIGIN\_UL\_BIT is set, the origin of the texture
-is the lower left corner of the loaded image. If the flag
-GLFW\_ORIGIN\_UL\_BIT is set, however, the first pixel is the upper left
-corner.
-
-For single component images (i.e. gray scale), the texture is uploaded as
-an alpha mask if the flag GLFW\_ALPHA\_MAP\_BIT flag is set, otherwise
-it is uploaded as a luminance texture.
-\end{refdescription}
-
-\begin{refnotes}
-\textbf{glfwLoadTextureImage2D} supports the Truevision Targa version 1 file
-format (.TGA). Supported pixel formats are: 8-bit gray scale, 8-bit
-paletted (24/32-bit color), 24-bit true color and 32-bit true color +
-alpha.
-
-Paletted images are translated into true color or true color + alpha pixel
-formats.
-
-The read texture is always rescaled to the nearest larger $2^m\times2^n$
-resolution using bilinear interpolation, if necessary, since \OpenGL\
-requires textures to have a $2^m\times2^n$ resolution.
-
-If the GL\_SGIS\_generate\_mipmap extension, which is usually hardware
-accelerated, is supported by the \OpenGL\ implementation it will be used
-for mipmap generation. Otherwise the mipmaps will be generated by \GLFW\
-in software.
-
-Since \OpenGL~1.0 does not support single component alpha maps, alpha map
-textures are converted to RGBA format under \OpenGL~1.0 when the
-GLFW\_ALPHA\_MAP\_BIT flag is set and the loaded texture is a single
-component texture. The red, green and blue components are set to 1.0.
-\end{refnotes}
-
-
-%-------------------------------------------------------------------------
 \pagebreak
 \section{OpenGL Extension Support}
 One of the great features of \OpenGL\ is its support for extensions, which
@@ -2431,430 +1961,6 @@ is supported by the used \OpenGL\ implementation.
 An \OpenGL\ context must be created before this function can be called
 (i.e. an \OpenGL\ window must have been opened with
 \textbf{glfwOpenWindow}).
-\end{refnotes}
-
-
-%-------------------------------------------------------------------------
-\pagebreak
-\section{Threads}
-A thread is a separate execution path within a process. All threads within
-a process share the same address space and resources. Threads execute in
-parallel, either virtually by means of time-sharing on a single processor,
-or truly in parallel on several processors. Even on a multi-processor
-system, time-sharing is employed in order to maximize processor
-utilization and to ensure fair scheduling. \GLFW\ provides an operating
-system independent interface to thread management.
-
-
-%-------------------------------------------------------------------------
-\subsection{glfwCreateThread}
-
-\textbf{C language syntax}
-\begin{lstlisting}
-GLFWthread glfwCreateThread( GLFWthreadfun fun, void *arg )
-\end{lstlisting}
-
-\begin{refparameters}
-\begin{description}
-\item [\textit{fun}]\ \\
-  A pointer to a function that acts as the entry point for the new thread.
-  The function should have the following C language prototype:
-
-  \texttt{void GLFWCALL functionname( void *arg );}
-
-  Where \textit{functionname} is the name of the thread function, and
-  \textit{arg} is the user supplied argument (see below).
-\item [\textit{arg}]\ \\
-  An arbitrary argument for the thread. \textit{arg} will be passed as the
-  argument to the thread function pointed to by \textit{fun}. For
-  instance, \textit{arg} can point to data that is to be processed by the
-  thread.
-\end{description}
-\end{refparameters}
-
-\begin{refreturn}
-The function returns a thread identification number if the thread was
-created successfully. This number is always positive. If the function
-fails, a negative number is returned.
-\end{refreturn}
-
-\begin{refdescription}
-The function creates a new thread, which executes within the same address
-space as the calling process. The thread entry point is specified with the
-\textit{fun} argument.
-
-Once the thread function \textit{fun} returns, the thread dies.
-\end{refdescription}
-
-\begin{refnotes}
-Even if the function returns a positive thread ID, indicating that the
-thread was created successfully, the thread may be unable to execute, for
-instance if the thread start address is not a valid thread entry point.
-\end{refnotes}
-
-
-%-------------------------------------------------------------------------
-\subsection{glfwDestroyThread}
-
-\textbf{C language syntax}
-\begin{lstlisting}
-void glfwDestroyThread( GLFWthread ID )
-\end{lstlisting}
-
-\begin{refparameters}
-\begin{description}
-\item [\textit{ID}]\ \\
-  A thread identification handle, which is returned by
-  \textbf{glfwCreateThread} or \textbf{glfwGetThreadID}.
-\end{description}
-\end{refparameters}
-
-\begin{refreturn}
-none
-\end{refreturn}
-
-\begin{refdescription}
-The function kills a running thread and removes it from the thread list.
-\end{refdescription}
-
-\begin{refnotes}
-This function is a very dangerous operation, which may interrupt a thread
-in the middle of an important operation, and its use is discouraged. You
-should always try to end a thread in a graceful way using thread
-communication, and use \textbf{glfwWaitThread} in order to wait for the
-thread to die.
-\end{refnotes}
-
-
-%-------------------------------------------------------------------------
-\subsection{glfwWaitThread}
-
-\textbf{C language syntax}
-\begin{lstlisting}
-int glfwWaitThread( GLFWthread ID, int waitmode )
-\end{lstlisting}
-
-\begin{refparameters}
-\begin{description}
-\item [\textit{ID}]\ \\
-  A thread identification handle, which is returned by
-  \textbf{glfwCreateThread} or \textbf{glfwGetThreadID}.
-\item [\textit{waitmode}]\ \\
-  Can be either GLFW\_WAIT or GLFW\_NOWAIT.
-\end{description}
-\end{refparameters}
-
-\begin{refreturn}
-The function returns GL\_TRUE if the specified thread died after the
-function was called, or the thread did not exist, in which case
-\textbf{glfwWaitThread} will return immediately regardless of
-\textit{waitmode}. The function returns GL\_FALSE if \textit{waitmode}
-is GLFW\_NOWAIT, and the specified thread exists and is still running.
-\end{refreturn}
-
-\begin{refdescription}
-If \textit{waitmode} is GLFW\_WAIT, the function waits for a thread to
-die. If \textit{waitmode} is GLFW\_NOWAIT, the function checks if a thread
-exists and returns immediately.
-\end{refdescription}
-
-
-%-------------------------------------------------------------------------
-\subsection{glfwGetThreadID}
-
-\textbf{C language syntax}
-\begin{lstlisting}
-GLFWthread glfwGetThreadID( void )
-\end{lstlisting}
-
-\begin{refparameters}
-none
-\end{refparameters}
-
-\begin{refreturn}
-The function returns a thread identification handle for the calling
-thread.
-\end{refreturn}
-
-\begin{refdescription}
-The function determines the thread ID for the calling thread. The ID is
-the same value as was returned by \textbf{glfwCreateThread} when the
-thread was created.
-\end{refdescription}
-
-
-%-------------------------------------------------------------------------
-\pagebreak
-\section{Mutexes}
-Mutexes are used to securely share data between threads. A mutex object
-can only be owned by one thread at a time. If more than one thread
-requires access to a mutex object, all but one thread will be put to sleep
-until they get access to it.
-
-
-%-------------------------------------------------------------------------
-\subsection{glfwCreateMutex}
-
-\textbf{C language syntax}
-\begin{lstlisting}
-GLFWmutex glfwCreateMutex( void )
-\end{lstlisting}
-
-\begin{refparameters}
-none
-\end{refparameters}
-
-\begin{refreturn}
-The function returns a mutex handle, or NULL if the mutex could not be
-created.
-\end{refreturn}
-
-\begin{refdescription}
-The function creates a mutex object, which can be used to control access
-to data that is shared between threads.
-\end{refdescription}
-
-
-%-------------------------------------------------------------------------
-\subsection{glfwDestroyMutex}
-
-\textbf{C language syntax}
-\begin{lstlisting}
-void glfwDestroyMutex( GLFWmutex mutex )
-\end{lstlisting}
-
-\begin{refparameters}
-\begin{description}
-\item [\textit{mutex}]\ \\
-  A mutex object handle.
-\end{description}
-\end{refparameters}
-
-\begin{refreturn}
-none
-\end{refreturn}
-
-\begin{refdescription}
-The function destroys a mutex object. After a mutex object has been
-destroyed, it may no longer be used by any thread.
-\end{refdescription}
-
-
-%-------------------------------------------------------------------------
-\subsection{glfwLockMutex}
-
-\textbf{C language syntax}
-\begin{lstlisting}
-void glfwLockMutex( GLFWmutex mutex )
-\end{lstlisting}
-
-\begin{refparameters}
-\begin{description}
-\item [\textit{mutex}]\ \\
-  A mutex object handle.
-\end{description}
-\end{refparameters}
-
-\begin{refreturn}
-none
-\end{refreturn}
-
-\begin{refdescription}
-The function will acquire a lock on the selected mutex object. If the
-mutex is already locked by another thread, the function will block the
-calling thread until it is released by the locking thread. Once the
-function returns, the calling thread has an exclusive lock on the mutex.
-To release the mutex, call \textbf{glfwUnlockMutex}.
-\end{refdescription}
-
-
-%-------------------------------------------------------------------------
-\subsection{glfwUnlockMutex}
-
-\textbf{C language syntax}
-\begin{lstlisting}
-void glfwUnlockMutex( GLFWmutex mutex )
-\end{lstlisting}
-
-\begin{refparameters}
-\begin{description}
-\item [\textit{mutex}]\ \\
-  A mutex object handle.
-\end{description}
-\end{refparameters}
-
-\begin{refreturn}
-none
-\end{refreturn}
-
-\begin{refdescription}
-The function releases the lock of a locked mutex object.
-\end{refdescription}
-
-
-%-------------------------------------------------------------------------
-\pagebreak
-\section{Condition Variables}
-Condition variables are used to synchronize threads. A thread can wait for
-a condition variable to be signaled by another thread.
-
-
-%-------------------------------------------------------------------------
-\subsection{glfwCreateCond}
-
-\textbf{C language syntax}
-\begin{lstlisting}
-GLFWcond glfwCreateCond( void )
-\end{lstlisting}
-
-\begin{refparameters}
-none
-\end{refparameters}
-
-\begin{refreturn}
-The function returns a condition variable handle, or NULL if the condition
-variable could not be created.
-\end{refreturn}
-
-\begin{refdescription}
-The function creates a condition variable object, which can be used to
-synchronize threads.
-\end{refdescription}
-
-
-%-------------------------------------------------------------------------
-\subsection{glfwDestroyCond}
-
-\textbf{C language syntax}
-\begin{lstlisting}
-void glfwDestroyCond( GLFWcond cond )
-\end{lstlisting}
-
-\begin{refparameters}
-\begin{description}
-\item [\textit{cond}]\ \\
-  A condition variable object handle.
-\end{description}
-\end{refparameters}
-
-\begin{refreturn}
-none
-\end{refreturn}
-
-\begin{refdescription}
-The function destroys a condition variable object. After a condition
-variable object has been destroyed, it may no longer be used by any
-thread.
-\end{refdescription}
-
-
-%-------------------------------------------------------------------------
-\subsection{glfwWaitCond}
-
-\textbf{C language syntax}
-\begin{lstlisting}
-void glfwWaitCond( GLFWcond cond, GLFWmutex mutex, double timeout )
-\end{lstlisting}
-
-\begin{refparameters}
-\begin{description}
-\item [\textit{cond}]\ \\
-  A condition variable object handle.
-\item [\textit{mutex}]\ \\
-  A mutex object handle.
-\item [\textit{timeout}]\ \\
-  Maximum time to wait for the condition variable. The parameter can
-  either be a positive time (in seconds), or GLFW\_INFINITY.
-\end{description}
-\end{refparameters}
-
-\begin{refreturn}
-none
-\end{refreturn}
-
-\begin{refdescription}
-The function atomically unlocks the mutex specified by \textit{mutex}, and
-waits for the condition variable \textit{cond} to be signaled. The thread
-execution is suspended and does not consume any CPU time until the
-condition variable is signaled or the amount of time specified by timeout
-has passed. If timeout is GLFW\_INFINITY, \textbf{glfwWaitCond} will wait
-forever for \textit{cond} to be signaled. Before returning to the calling
-thread, \textbf{glfwWaitCond} automatically re-acquires the mutex.
-\end{refdescription}
-
-\begin{refnotes}
-The mutex specified by \textit{mutex} must be locked by the calling thread
-before entrance to \textbf{glfwWaitCond}.
-
-A condition variable must always be associated with a mutex, to avoid the
-race condition where a thread prepares to wait on a condition variable and
-another thread signals the condition just before the first thread actually
-waits on it.
-\end{refnotes}
-
-
-%-------------------------------------------------------------------------
-\subsection{glfwSignalCond}
-
-\textbf{C language syntax}
-\begin{lstlisting}
-void glfwSignalCond( GLFWcond cond )
-\end{lstlisting}
-
-\begin{refparameters}
-\begin{description}
-\item [\textit{cond}]\ \\
-  A condition variable object handle.
-\end{description}
-\end{refparameters}
-
-\begin{refreturn}
-none
-\end{refreturn}
-
-\begin{refdescription}
-The function restarts one of the threads that are waiting on the condition
-variable \textit{cond}. If no threads are waiting on \textit{cond},
-nothing happens. If several threads are waiting on \textit{cond}, exactly
-one is restarted, but it is not specified which.
-\end{refdescription}
-
-\begin{refnotes}
-When several threads are waiting for the condition variable, which thread
-is started depends on operating system scheduling rules, and may vary from
-system to system and from time to time.
-\end{refnotes}
-
-
-%-------------------------------------------------------------------------
-\subsection{glfwBroadcastCond}
-
-\textbf{C language syntax}
-\begin{lstlisting}
-void glfwBroadcastCond( GLFWcond cond )
-\end{lstlisting}
-
-\begin{refparameters}
-\begin{description}
-\item [\textit{cond}]\ \\
-  A condition variable object handle.
-\end{description}
-\end{refparameters}
-
-\begin{refreturn}
-none
-\end{refreturn}
-
-\begin{refdescription}
-The function restarts all the threads that are waiting on the condition
-variable \textit{cond}. If no threads are waiting on \textit{cond},
-nothing happens.
-\end{refdescription}
-
-\begin{refnotes}
-When several threads are waiting for the condition variable, the order in
-which threads are started depends on operating system scheduling rules,
-and may vary from system to system and from time to time.
 \end{refnotes}
 
 
@@ -3002,33 +2108,6 @@ combinations will have no effect, since those key combinations are blocked
 by \GLFW . This mode can be useful in situations when the \GLFW\ program
 must not be interrupted (normally for games in fullscreen mode).
 \end{mysamepage}
-
-
-%-------------------------------------------------------------------------
-\subsection{glfwGetNumberOfProcessors}
-
-\textbf{C language syntax}
-\begin{lstlisting}
-int glfwGetNumberOfProcessors( void )
-\end{lstlisting}
-
-\begin{refparameters}
-none
-\end{refparameters}
-
-\begin{refreturn}
-The function returns the number of active processors in the system.
-\end{refreturn}
-
-\begin{refdescription}
-The function determines the number of active processors in the system.
-\end{refdescription}
-
-\begin{refnotes}
-Systems with several logical processors per physical processor, also
-known as SMT (Symmetric Multi Threading) processors, will report the
-number of logical processors.
-\end{refnotes}
 
 
 \end{document}
